--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -159,11 +159,11 @@
     <Compile Include="CSharpFeatures\DefaultExpressions.cs" />
     <Compile Include="CSharpFeatures\OutVariables.cs" />
     <Compile Include="Extensions\SyntaxNodeExtensions.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseOutVariablesInMethodInvocations.cs" />
-    <Compile Include="SharpenSuggestions\CSharp71\BaseUseDefaultExpressionInOptionalParameters.cs" />
-    <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalConstructorParameters.cs" />
-    <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalMethodParameters.cs" />
-    <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInReturnStatements.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\OutVariables\UseOutVariablesInMethodInvocations.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\DefaultExpressions\BaseUseDefaultExpressionInOptionalParameters.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\DefaultExpressions\UseDefaultExpressionInOptionalConstructorParameters.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\DefaultExpressions\UseDefaultExpressionInOptionalMethodParameters.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\DefaultExpressions\UseDefaultExpressionInReturnStatements.cs" />
     <Compile Include="SingleSyntaxTreeAnalysisContext.cs" />
     <Compile Include="AnalysisResult.cs" />
     <Compile Include="CSharpFeatures\ExpressionBodiedMembers.cs" />
@@ -175,17 +175,17 @@
     <Compile Include="ISingleSyntaxTreeAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharpenEngine.cs" />
-    <Compile Include="SharpenSuggestions\CSharp60\BaseUseExpressionBodyForGetOnlyMembers.cs" />
-    <Compile Include="SharpenSuggestions\CSharp60\UseExpressionBodyForGetOnlyIndexers.cs" />
-    <Compile Include="SharpenSuggestions\CSharp60\UseExpressionBodyForGetOnlyProperties.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\BaseUseExpressionBodyForGetAccessors.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForGetAccessorsInIndexers.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\BaseUseExpressionBodyForSetAccessors.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForSetAccessorsInIndexers.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForSetAccessorsInProperties.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForGetAccessorsInProperties.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForDestructors.cs" />
-    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForConstructors.cs" />
+    <Compile Include="SharpenSuggestions\CSharp60\ExpressionBodiedMembers\BaseUseExpressionBodyForGetOnlyMembers.cs" />
+    <Compile Include="SharpenSuggestions\CSharp60\ExpressionBodiedMembers\UseExpressionBodyForGetOnlyIndexers.cs" />
+    <Compile Include="SharpenSuggestions\CSharp60\ExpressionBodiedMembers\UseExpressionBodyForGetOnlyProperties.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\BaseUseExpressionBodyForGetAccessors.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInIndexers.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\BaseUseExpressionBodyForSetAccessors.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInIndexers.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForSetAccessorsInProperties.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForGetAccessorsInProperties.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForDestructors.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\ExpressionBodiedMembers\UseExpressionBodyForConstructors.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
